--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
-../data/*
+./data/*
+./notebooks/owid-covid-data.csv
